[package]
name = "demo-lipsum-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lipsum = {  version = "0.9.1" }

